@@ -3,16 +3,20 @@ package es.ponnythelight.listeners;
 import es.ponnythelight.chunkentitylimiter.ChunkEntityLimiter;
 import org.bukkit.ChatColor;
 import org.bukkit.Chunk;
+import org.bukkit.Material;
+import org.bukkit.block.Block;
 import org.bukkit.configuration.Configuration;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
+import org.bukkit.event.block.BlockPlaceEvent;
 import org.bukkit.event.entity.CreatureSpawnEvent;
 import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.world.ChunkLoadEvent;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
@@ -31,19 +35,20 @@ public class checkListener implements Listener {
 
         Entity entity = e.getEntity();
 
+
         Chunk chunk = e.getLocation().getChunk();
 
-        List<Entity> en = List.of(chunk.getEntities());
+        List<Entity> en = Arrays.asList(chunk.getEntities());
 
         AtomicInteger count = new AtomicInteger();
         AtomicInteger counti = new AtomicInteger();
+        AtomicInteger countc = new AtomicInteger();
 
         en.stream().forEach(k -> {
             if (k.getType().equals(EntityType.DROPPED_ITEM)) {
                 counti.getAndIncrement();
 
                 if (counti.get() >= config.getInt("Config.dropped-items-per-chunk")) {
-                    System.out.println("Spawn");
                     e.setCancelled(true);
                 }
 
@@ -74,10 +79,11 @@ public class checkListener implements Listener {
         Configuration config = plugin.getConfig();
         Chunk chunk = e.getChunk();
 
-        List<Entity> en = List.of(chunk.getEntities());
+        List<Entity> en = Arrays.asList(chunk.getEntities());
 
         AtomicInteger count = new AtomicInteger();
         AtomicInteger counti = new AtomicInteger();
+        AtomicInteger countc = new AtomicInteger();
 
         en.stream().forEach(k -> {
             if (k.getType().equals(EntityType.DROPPED_ITEM)) {
@@ -92,7 +98,11 @@ public class checkListener implements Listener {
 
             } else
             if (k.getType().equals(EntityType.ITEM_FRAME)) {
+                countc.getAndIncrement();
 
+                if (countc.get() >= config.getInt("Config.item-frames-per-chunk")) {
+                    k.remove();
+                }
             } else
             if (k.getType().equals(EntityType.UNKNOWN)) {
 
@@ -126,23 +136,36 @@ public class checkListener implements Listener {
 
         Chunk chunk = player.getLocation().getChunk();
 
-        List<Entity> en = List.of(chunk.getEntities());
+        List<Entity> en = Arrays.asList(chunk.getEntities());
 
         AtomicInteger counti = new AtomicInteger();
 
-        en.stream().forEach(k -> {
+//        en.stream().forEach(k -> {
+//
+//            if (k.getType().equals(EntityType.DROPPED_ITEM)) {
+//                counti.getAndIncrement();
+//
+//                if (counti.get() >= config.getInt("Config.dropped-items-per-chunk")) {
+//                    System.out.println("Spawn");
+//                    e.setCancelled(true);
+//                    return player.sendMessage(ChatColor.translateAlternateColorCodes('&', config.getString("Messages.prefix") + config.getString("Messages.max-dropped-items")));
+//                }
+//
+//            }
+//        });
 
-            if (k.getType().equals(EntityType.DROPPED_ITEM)) {
+        for (Entity i : en) {
+            if (i.getType().equals(EntityType.DROPPED_ITEM)) {
                 counti.getAndIncrement();
 
                 if (counti.get() >= config.getInt("Config.dropped-items-per-chunk")) {
-                    System.out.println("Spawn");
                     e.setCancelled(true);
                     player.sendMessage(ChatColor.translateAlternateColorCodes('&', config.getString("Messages.prefix") + config.getString("Messages.max-dropped-items")));
+                    return;
                 }
 
             }
-        });
+        }
     }
 
 
